# ios-app-profiling

./: .gitignore  CONFLUENCE_DOCUMENTATION.md  DEVICE_PROFILING_USAGE.md  Dockerfile  README.md  TechnicalDocumentation.md  WEB_INTERFACE_GUIDE.md  battery_tests.db  device_profiling_parser.py  docker-compose.yml  instruments_tester.py  instruments_tester_backup.py  pyproject.toml  requirements.txt  setup_dependencies.py  simple_tester.py  start_web_ui.sh  test_project.py
.github/: copilot-instructions.md
ios_battery_tester/: __init__.py  cli.py
ios_battery_tester/core/: __init__.py  battery_monitor.py  device_manager.py  exceptions.py  test_runner.py
ios_battery_tester/web/: __init__.py  app.py
ios_battery_tester/web/templates/: index.html
output/: README.md
output/results/: hybrid_battery_test_beta_20251004_202634.json
uploads/: PowerProfiler_25-10-04_185707_to_25-10-04_185729.aar
web_ui/: app.py  battery_tests.db
web_ui/templates/: dashboard.html  devices.html  file_analysis.html  live_testing.html  results.html
