[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ios-battery-tester"
version = "1.0.0"
description = "Comprehensive battery drain testing utility for iOS applications"
authors = [
    {name = "iOS Battery Tester", email = "test@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware",
]
dependencies = [
    "click>=8.0.0",
    "pymobiledevice3>=1.40.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.8.0",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "plotly>=5.15.0",
    "seaborn>=0.11.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
ios-battery-test = "instruments_tester:main"

[project.urls]
Homepage = "https://github.com/example/ios-battery-tester"
Repository = "https://github.com/example/ios-battery-tester"
Issues = "https://github.com/example/ios-battery-tester/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
